--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ip_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="192.168.1.8" />
+        android:text="10.242.86.5" />
 
     <Button
         android:id="@+id/select_btn"
@@ -36,5 +36,6 @@
         android:id="@+id/image_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:scaleType="centerCrop"
         />
 </LinearLayout>
